# 2024_20291563

./: README.md  VSpath.txt  doxygen-deploy.yml
.github/workflows/: doxygen-deploy.yml
GroupWork/: Doxyfile  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  main.cpp  mainwindow.cpp  mainwindow.h
worksheet1/: README.md
worksheet2/: README.md
worksheet3/: README.md
worksheet3/Ex3_lib/src/: calc.cpp
worksheet3/Ex4_dll/include/: adder.h
worksheet4/: README.md
worksheet4/Ex3_dll_CMake/: CMakeLists.txt
worksheet4/Ex4_dll_CMake/: CMakeLists.txt  adder.h
worksheet5/: CMakeLists.txt  adder.cpp  adder.h  index.html
worksheet5/.github/workflows/: doxygen-deploy.yml
worksheet6/: CMakeLists.txt  ModelPart.cpp  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
worksheet7/Ex2/: openvrPath.txt
worksheet7/Ex3/: CMakeLists.txt  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.h  optiondialog.ui
worksheet7/Final/: ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  draft.docx  main.cpp  mainwindow.cpp  mainwindow.h
